# carscrapper

./: .gitignore  README.md  REPORT.md  debug_check.py  debug_full_page.html  pyproject.toml  test_calculadora.py  test_cochesnet_models.py  test_curl_cffi.py  test_curl_cffi_output.html  test_mobile_total.py
data/: cochesnet_models_by_make.json  mobilede_models_by_make.json
docs/: architecture.md  data_schema.md
examples/: usage_examples.md
exports/: bmw_x5_comparacion.csv  car_listings_mobile_de_20251031_135436.xlsx  mercedes_c300_comparacion.csv  mercedes_c300_corregido.csv  mercedes_completo.xlsx  mercedes_filtrado.xlsx  mercedes_test.xlsx  test_bmw_x5.xlsx  test_coches_net.xlsx  test_debug.csv  test_final.csv
playwright-coches-net-profile/: Local State
playwright-coches-net-profile/Default/: BrowsingTopicsState  DIPS  Favicons  History  Preferences  Secure Preferences  Top Sites  Web Data
playwright-coches-net-profile/Default/DawnGraphiteCache/: index
playwright-coches-net-profile/Default/DawnWebGPUCache/: index
playwright-coches-net-profile/Default/Extension Rules/: LOG
playwright-coches-net-profile/GrShaderCache/: data_0  data_1  f_000001  index
playwright-coches-net-profile/GraphiteDawnCache/: index
playwright-coches-net-profile/ShaderCache/: index
playwright-coches-net-profile/segmentation_platform/: ukm_db
scripts/: fetch_mobilede_models.py
src/: debug_decoded_html_sample.html  debug_full_page.html
src/import_cars/: cli.py  config.py  exporters.py  filters.py  models.py
src/import_cars.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+61 files in other folders)
