[project]
name = "import-cars"
version = "0.1.0"
description = "High-throughput scrapers for mobile.de and coches.net"
authors = [{ name = "Import Cars", email = "dev@importcars.local" }]
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44.0",
    "playwright-stealth>=1.0.6",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.2.1",
    "selectolax>=0.3.21",
    "typer>=0.12.3",
    "orjson>=3.10.5",
    "httpx>=0.27.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
import-cars = "import_cars.cli:app"
